[package]
name = "cap_scr"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30.12"
#pollster = "0.4.0"
tray-icon = "0.21.2"
xcap = "0.7.1"
fs_extra = "=1.3.0"
eframe = "0.33.0"
image = "0.25.8"
#imageproc = "0.25.0"
photon-rs = "0.3.3"
#arboard = "3.6.1"
clipboard-rs = "0.3.0"
#rdev = "0.5.3"
chrono = "0.4.42"
rfd = "0.15.4"
#native-dialog = "0.9.4"
home = "0.5.12"
x11rb = "0.13.2"
