[package]
name = "capshr"
description = "A screenshot utility."
version = "0.1.0"
edition = "2024"
authors = ["gm3k4g"]

[lints.clippy]
indexing_slicing = "deny"
fallible_impl_from = "deny"
wildcard_enum_match_arm = "deny"
unneeded_field_pattern = "deny"
fn_params_excessive_bools = "deny"
must_use_candidate = "deny"

[dependencies]
egui-file-dialog = "0.12.0"
#dirs = "6.0.0"
home = "0.5.12"
futures = "0.3.31"
winit = "0.30.12"
egui = "0.33.2"
#pollster = "0.4.0"
#tray-icon = "0.21.2"
xcap = "0.7.1"
#fs_extra = "=1.3.0"
eframe = "0.33.0"
image = "0.25.8"
#imageproc = "0.25.0"
photon-rs = "0.3.3"
arboard = "3.6.1"
#clipboard-rs = "0.3.0"
#rdev = "0.5.3"
chrono = "0.4.42"
x11rb = "0.13.2"
